app translation - updated - WIP

--- a/src/pages/local/02_institution_details_service.html
+++ b/src/pages/local/02_institution_details_service.html
@@ -35,7 +35,7 @@
     
                 <div class="mt-4 flex gap-4 items-center">
                     <label for="employees" class="block mb-2 text-sm font-medium text-gray-900 w-1/2">
-                        <span class="t_employees">Employees</span>
+                        <span class="t_staff">Employees</span>
                     </label>
                     <input type="number" min="0" id="employees"
                         class="disabled:bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5"
