--- a/src/pages/local/04_add_user.html
+++ b/src/pages/local/04_add_user.html
@@ -30,9 +30,9 @@
                 <select name="userType" id="userType"
                     class="disabled:bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="" selected>----</option>
-                    <option value="2">DATA COLLECTOR</option>
-                    <option value="3">HR SPECIALIST</option>
-                    <option value="4">ADMIN SPECIALIST</option>
+                    <option class="t_data_collector" value="2">DATA COLLECTOR</option>
+                    <option class="t_hr_specialist" value="3">HR SPECIALIST</option>
+                    <option class="t_admin_specialist" value="4">ADMIN SPECIALIST</option>
                 </select>
             </div>
 
