--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -138,19 +138,18 @@
                 <div>
                     <select id="i5" name="i5" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="--">--</option>
-                        <option value="11">11. Mehribonlik uyi</option>
-                        <option value="12">12. "Muruvvat" nogironligi bo'lgan bolalar uchun  internat uyi</option>
-                        <option value="13">13. Oilaviy bolalar uyi</option>
-                        <option value="14">14. SOS Bolalar makhallalari/oilalari</option>
-                        <option value="15">15. Bolalar uyi</option>
-                        <option value="16">16. Patronat oila</option>
-                        <option value="17">17. Vasiylik/homiylik</option>
-                        <option value="21">21. Kar yoki eshitish qobiliyati past bolalar uchun I-II turi</option>
-                        <option value="22">22. Ko'zi ojiz va zaif ko'ruvchi bolalar uchun III-IV turi</option>
-                        <option value="23">23. Nutqida og'ir nuqsoni bo'lgan bolalar uchun V turi</option>
-                        <option value="24">24. Mushak-skelet tizimining buzilishi bo'lgan bolalar uchun VI tur</option>
-                        <option value="25">25. Aqliy rivojlanishi sekinlashgan bolalar uchun VII tur / ruhiy kasalliklar</option>
-                        <option value="26">26. Aqliy (intellektual) nuqsoni bo'lgan bolalar uchun VIII tur</option>
+                        <option value="11">11. Bolalar uyi</option>
+                        <option value="12">12. Mehribonlik uyi</option>
+                        <option value="13">13. Nogironligi bo'lgan bolalar uchun Muruvvat internat uylari</option>
+                        <option value="14">14. SOS-bolalar qishloqlari / oilalari</option>
+                        <option value="21">21. I tur - kar bolalar uchun internatlar</option>
+                        <option value="22">22. II tur - eshitish qobiliyati zaif va kelgusida eshitish qobiliyatini yo’qotadiganlar uchun internatlar</option>
+                        <option value="23">23. III tur - “Nurli maskan” ko’zi ojiz bolalar uchun ixtisoslashtirilgan maktab-internatlari</option>
+                        <option value="24">24. IV tur - ko’zi ojiz va keyinchalik ko’rish qobiliyatini yo’qotadiganlar uchun “Noorli maskan” ixtisoslashtirilgan maktab-internatlari</option>
+                        <option value="25">25. V tur - og’ir nutq buzilishi bo’lgan bolalar uchun internatlar</option>
+                        <option value="26">26. VI tur - tayanch-harakat apparati nuqsonlari bo’lgan bolalar uchun internatlar</option>
+                        <option value="27">27. VII tur - aqli zaif bolalar maktab-internatlari</option>
+                        <option value="28">28. VIII tur - aqli zaif bolalar maktab-internatlarini qo’llash</option>
                     </select>
                 </div>
             </div>
@@ -562,6 +561,11 @@
                         <label for="e18-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
+            </div>
+
+            <div class="grid mt-10">
+                <label for="obs">OBS. Kuzatuvlarni</label>
+                <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
         </form>
