--- a/src/pages/instruments/03_csr_ru.html
+++ b/src/pages/instruments/03_csr_ru.html
@@ -138,19 +138,18 @@
                 <div>
                     <select id="i5" name="i5" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="--">--</option>
-                        <option value="11">11. Дом «Мехрибонлик»</option>
-                        <option value="12">12. Дом-интернат «Мурувват» для детей с инвалидностью</option>
-                        <option value="13">13. Детский дом семейного типа</option>
-                        <option value="14">14. SOS Детские деревни/семьи</option>
-                        <option value="15">15. Детский дом (Дом ребенка)</option>
-                        <option value="16">16. Патронатная семья</option>
-                        <option value="17">17. Опека/попечительство</option>
-                        <option value="21">21. Тип I-II для глухих или слабослышащих детей.</option>
-                        <option value="22">22. Тип III-IV для слепых или слабовидящих детей.</option>
-                        <option value="23">23. V тип для детей с тяжелыми нарушениями речи.</option>
-                        <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата.</option>
-                        <option value="25">25. Тип VII для детей с детьми с задержкой психического развития/психическими нарушениями.</option>
-                        <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными возможностями.</option>
+                        <option value="11">11. Детский дом (Дом ребенка)</option>
+                        <option value="12">12. Дом Мехрибонлик</option>
+                        <option value="13">13. Дом-интернат "Мурувват" для детей с инвалидностью.</option>
+                        <option value="14">14. SOS Детские деревни</option>
+                        <option value="21">21. I тип - школы-интернаты для глухих детей</option>
+                        <option value="22">22. Тип II - школы-интернаты для слабослышащих и тех, кто впоследствии потеряет слух</option>
+                        <option value="23">23. III тип - специализированные школы-интернаты для слепых детей “Нурли Маскан”</option>
+                        <option value="24">24. IV тип - специализированные школы-интернаты “Нурли Маскан” для слабовидящих и тех, кто впоследствии потеряет зрение</option>
+                        <option value="25">25. V тип - школы-интернаты для детей с тяжелыми нарушениями речи</option>
+                        <option value="26">26. VI тип - школы-интернаты для детей с нарушениями опорно-двигательного аппарата</option>
+                        <option value="27">27. Тип VII - школы-интернаты для детей с задержкой психического развития</option>
+                        <option value="28">28. Тип VIII - поддержка школ-интернатов для детей с задержкой интеллектуального развития</option>
                     </select>
                 </div>
             </div>
@@ -562,6 +561,11 @@
                         <label for="e18-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
                     </div>
                 </div>
+            </div>
+
+            <div class="grid mt-10">
+                <label for="obs">OBS. Наблюдения</label>
+                <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
         </form>
