--- a/src/pages/instruments/03_csr_en.html
+++ b/src/pages/instruments/03_csr_en.html
@@ -35,12 +35,10 @@
             <p class="mb-2">This questionnaire serves as a crucial tool for understanding the organizational structure and individual profiles within each child care institution and boarding school. By collecting comprehensive data, we aim to enhance decision-making, improve staff management, and ensure the well-being of both employees and the children placed into care.</p>
             <p class="mb-2">This questionnaire aims to gather information about each position within the staff structure of the institution. Whether a position is currently occupied or vacant, please complete a separate questionnaire for each position.</p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-12">
-                <div>Q1. Completion date of questionnaire</div>
-                <div>
-                    <input type="text" id="q1" name="q1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
-                </div>
-            </div>
+
+
+            <input type="hidden" id="q1" name="q1" />
+
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>Q2. Name, patronymics, and surname of the person who filled in the questionnaire</div>
                 <div>
