--- a/src/pages/regional/01_dashboard.html
+++ b/src/pages/regional/01_dashboard.html
@@ -324,7 +324,6 @@
             </div>
         </div>
     </div>
-    </div>
     <footer>
         <div class="flex gap-10 px-4 py-4 border-t border-gray-100">
             <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded w-44 flex items-center justify-center gap-4"
@@ -345,34 +344,25 @@
                 </svg>
                 <span class="t_export_data"></span>
             </button>
-            <button id="inson_user"
-                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-52">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 fill-sky-700" viewBox="0 0 448 512">
-                    <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
-                </svg>
-                <span class="t_user"></span>
-            </button>
-            <button id="users"
-                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-52">
-                <svg class="h-8 fill-sky-700" xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                        d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192h42.7c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0H21.3C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7h42.7C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3H405.3zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352H378.7C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7H154.7c-14.7 0-26.7-11.9-26.7-26.7z" />
-                </svg>
-
-                <span class="t_users"></span>
-            </button>
-            <button id="institution"
-                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-44">
+            <button id="institutions"
+                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded flex items-center justify-center gap-4 w-44">
                 <svg class="h-8 fill-slate-500" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
                         d="M243.4 2.6l-224 96c-14 6-21.8 21-18.7 35.8S16.8 160 32 160v8c0 13.3 10.7 24 24 24H456c13.3 0 24-10.7 24-24v-8c15.2 0 28.3-10.7 31.3-25.6s-4.8-29.9-18.7-35.8l-224-96c-8-3.4-17.2-3.4-25.2 0zM128 224H64V420.3c-.6 .3-1.2 .7-1.8 1.1l-48 32c-11.7 7.8-17 22.4-12.9 35.9S17.9 512 32 512H480c14.1 0 26.5-9.2 30.6-22.7s-1.1-28.1-12.9-35.9l-48-32c-.6-.4-1.2-.7-1.8-1.1V224H384V416H344V224H280V416H232V224H168V416H128V224zM256 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
                 </svg>
 
-                <span class="t_institution"></span>
+                <span class="t_institutions"></span>
+            </button>
+            <button id="insons"
+                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded flex items-center justify-center gap-4 w-44">
+                <svg class="h-8 fill-slate-500" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M243.4 2.6l-224 96c-14 6-21.8 21-18.7 35.8S16.8 160 32 160v8c0 13.3 10.7 24 24 24H456c13.3 0 24-10.7 24-24v-8c15.2 0 28.3-10.7 31.3-25.6s-4.8-29.9-18.7-35.8l-224-96c-8-3.4-17.2-3.4-25.2 0zM128 224H64V420.3c-.6 .3-1.2 .7-1.8 1.1l-48 32c-11.7 7.8-17 22.4-12.9 35.9S17.9 512 32 512H480c14.1 0 26.5-9.2 30.6-22.7s-1.1-28.1-12.9-35.9l-48-32c-.6-.4-1.2-.7-1.8-1.1V224H384V416H344V224H280V416H232V224H168V416H128V224zM256 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
+                </svg>
+
+                <span class="t_inson"></span>
             </button>
         </div>
     </footer>
